--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -5,6 +5,9 @@
         "paths": {
             "c/webcomponent1": [
                 "webcomponent1/webcomponent1.js"
+            ],
+            "c/list-contacts-to-deliver": [
+                "ListContactsToDeliver/ListContactsToDeliver.js"
             ]
         }
     },
