now need to call Heroku API, oh dear

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -11,6 +11,9 @@
             ],
             "c/webcomponent1": [
                 "webcomponent1/webcomponent1.js"
+            ],
+            "c/pubsub": [
+                "pubsub/pubsub.js"
             ]
         }
     },
