--- a/.sfdx/sfdx-config.json
+++ b/.sfdx/sfdx-config.json
@@ -1,4 +1,4 @@
 {
-    "defaultusername": "scratchie1",
-    "defaultdevhubusername": "DevHub1"
+    "defaultdevhubusername": "fryan@march19dev.dev",
+    "defaultusername": "scratchie"
 }
