--- a/.sfdx/sfdx-config.json
+++ b/.sfdx/sfdx-config.json
@@ -1,4 +1,4 @@
 {
-    "defaultdevhubusername": "fryan@march19dev.dev",
-    "defaultusername": "scratchie"
+    "defaultusername": "lwcdronedelivery",
+    "defaultdevhubusername": "DevHub"
 }
