--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -3,13 +3,13 @@
         "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
-            "c/error-panel": [
+            "c/errorPanel": [
                 "errorPanel/errorPanel.js"
             ],
-            "c/list-contacts-to-deliver": [
+            "c/listContactsToDeliver": [
                 "listContactsToDeliver/listContactsToDeliver.js"
             ],
-            "c/map-locations-to-deliver": [
+            "c/mapLocationsToDeliver": [
                 "mapLocationsToDeliver/mapLocationsToDeliver.js"
             ],
             "c/pubsub": [
@@ -23,5 +23,10 @@
     "include": [
         "**/*",
         "../../../../.sfdx/typings/lwc/**/*.d.ts"
-    ]
+    ],
+    "typeAcquisition": {
+        "include": [
+            "jest"
+        ]
+    }
 }
